--- a/.github/workflows/deploy_rule.yml
+++ b/.github/workflows/deploy_rule.yml
@@ -41,9 +41,9 @@ jobs:
           # if not then create a new tag
           git add dist/default_config.json
           git commit -m "update default_config.json"
-          echo v${{ steps.set_var.outputs.version }}
-          git tag -l | grep v${{ steps.set_var.outputs.version }} || echo "yes"
-          git tag -l | grep v${{ steps.set_var.outputs.version }} || git tag -a v${{ steps.set_var.outputs.version }} -m "v${{ steps.set_var.outputs.version }}"
-          git tag -l
+          # echo v${{ steps.set_var.outputs.version }}
+          # git tag -l | grep v${{ steps.set_var.outputs.version }} || echo "yes"
+          # git tag -l | grep v${{ steps.set_var.outputs.version }} || git tag -a v${{ steps.set_var.outputs.version }} -m "v${{ steps.set_var.outputs.version }}"
+          # git tag -l
           git remote -v
-          git push origin --follow-tags
+          git push
