--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,7 @@ on:
       - '.github/workflows/deploy.yml'
       - "wrangler.toml"
       - "worker.template.js"
+      - "Makefile"
 jobs:
   deploy:
     name: Deploy to Cloudflare Pages
