--- a/.github/workflows/deploy_rule_dev.yml
+++ b/.github/workflows/deploy_rule_dev.yml
@@ -37,7 +37,7 @@ jobs:
       - name: add buildinConfigUpdatedAt field to repo/dist/default_config.json
         run: make generateconfig target=repo/dist/default_config.json
       - name: cp base config
-        run: git checkout v${{ steps.set_var.outputs.version }} && cp default_config.json repo/dist/base_config.json && git checkout ${{github.event.inputs.branch || 'develop'}}
+        run: git fetch --tags && git checkout v${{ steps.set_var.outputs.version }} && cp default_config.json repo/dist/base_config.json && git checkout ${{github.event.inputs.branch || 'develop'}}
       - name: diff config
         run: make diff-config baseConfig=repo/dist/base_config.json latestConfig=repo/dist/default_config.json outputDiffConfig=repo/dist/diff_config.json
       # - name: echo diff config
