--- a/.github/workflows/deploy_rule_dev.yml
+++ b/.github/workflows/deploy_rule_dev.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
     inputs:
       branch:
-        default: "develop"
+        default: "feat/diff-config"
         description: "branch"
         type: string
 jobs:
