--- a/.github/workflows/deploy_cn_rule.yml
+++ b/.github/workflows/deploy_cn_rule.yml
@@ -46,5 +46,5 @@ jobs:
           apiToken: ${{ secrets.IMMERSIVE_CLOUDFLARE_API_TOKEN }}
           accountId: ${{secrets.IMMERSIVE_CLOUDFLARE_ACCOUNT_ID}}
           workingDirectory: ./repo/
-          command: deploy ./repo/.cache/worker.js --env prod
+          command: deploy ./.cache/worker.js --env prod
 
