cn rule 自动化构建

--- a/.github/workflows/deploy_cn_rule.yml
+++ b/.github/workflows/deploy_cn_rule.yml
@@ -3,6 +3,11 @@ on:
   repository_dispatch:
     types:
       - deploy-cn-rule
+  push:
+    branches:
+      - main
+    paths:
+      - 'dist/**'
   workflow_dispatch:
     inputs:
       branch:
